Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants
TODO: add debug/trace logging to some modules
TODO: use the eval-with-cb-call trick also to speed up JSON?
TODO: FAQ: common pitfalls? invoke-before-return
TODO: FAQ: scope-ids? hosts file order?
TODO: AnyEvent::Handle with AnyEvent::IO?

	- t/63* tests were wrongly in MANIFEST.

7.04 Thu Nov 15 02:23:58 CET 2012
	- debugging code left in.

7.03 Thu Nov 15 02:16:11 CET 2012
	- AnyEvent::Socket::inet_aton did not work when dns resolution was
          used to find the addresses (analyzed and patch by Maxime Soulé).
        - fix a memory leak in the /etc/hosts lookup code when hosts don't
          resolve and are not in hosts (analyzed by sten).

7.02 Tue Aug 14 04:27:58 CEST 2012
	- AnyEvent::Util::run_cmd could block indefinitely (analyzed and test
          program by Yorhel).
	- verified that AnyEvent::Socket follows RFC5952.
        - try to parse "ADDR#PORT" in addition to "ADDR PORT".

7.01 Sun May 13 01:03:17 CEST 2012
	- fail with EPROTO in AnyEvent::Handle wqhen TLS is requested but
          not available, instead of throwing an exception.
	- use File::Spec to get the tmpdir in t/*, to avoid needless
          failures on (most, not mine :) windows boxes.
        - new handle read types: tls_detect and tls_autostart.

7.0  Fri Apr 13 06:33:30 CEST 2012
        - child watchers are broken in POE 1.352 (also many earlier
          versions) and there seems to be no way to work around it, as POE
          itself is inherently racy. Document this regression and add a delay
          in t/68_poe_03_child.t for the time being.
	- new module AnyEvent::IO, that is a frontend to either a pure-perl
          synchronous I/O implementation (AnyEvent::IO::Perl), or to the
          asynchronous I/O extension IO::AIO (AnyEvent::IO::IOAIO).
        - load /etc/hosts only when DNS has no answer.
        - stat /etc/hosts on every access and reload it if it changed.